@@ -64,6 +64,9 @@ mjb.forceBannersOverwrite=false
 # Force the jukebox's Video Image files to be overwritten
 mjb.forceVideoImagesOverwrite=false
 
+# Force the skin files to be overwritten (Use when changeing the skin)
+mjb.forceSkinOverwrite=false
+
 # Default player path for A-100 or A-110
 mjb.playerRootPath=file:///opt/sybhttpd/localhost.drives/HARD_DISK/Video/
 # Default Player Path for C-200 with 1 hard disk.
